# world_models_paper

./: .gitignore  README.md  pyproject.toml
checkpoints/500k_example_vae/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
checkpoints/500k_example_vae/array_metadatas/: process_0
checkpoints/500k_example_vae/ocdbt.process_0/: manifest.ocdbt
notebooks/: basic_env_testing.ipynb  inspect_vae_translation.ipynb  label_vae_stats.ipynb  mdn_rnn.ipynb  train_controller.ipynb  train_rnn.ipynb  train_vae.ipynb  zarr_dataloader.ipynb
scripts/: build_hdf5_dataset.py  collect_data.py  imagine.py  label_vae_dataset.py  train_controller.py  train_rnn.py  train_vae.py
src/wm/: __init__.py  agent.py  controller.py  data.backup.py  data.py  envs.py  imagination.py  rnn.py  utils.py  vae.py
src/wm/utils/: __init__.py  checkpoints.py  initializer.py  obs.py
styles/: paper.mplstyle
tests/: obs_test.ipynb  test_data.py  test_envs.py  test_imagination.py  test_initializers.py  test_obs_utils.py  test_rnn.py  test_rnn_data.py  test_vae.py
