[project]
name = "world-models-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chex>=0.1.91",
    "einops>=0.8.2",
    "flax>=0.12.7",
    "grain>=0.2.17",
    "gymnasium[box2d]>=1.3.0",
    "ipykernel>=7.3.0",
    "jax>=0.10.1",
    "jaxtyping>=0.3.10",
    "matplotlib>=3.10.9",
    "mediapy>=1.2.6",
    "opencv-python>=4.13.0.92",
    "optax>=0.2.8",
    "orbax>=0.1.9",
    "pillow>=12.2.0",
    "swig>=4.4.1",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wm"]

[tool.ruff]
ignore = ["F722"] # irritating error with jaxtyping
